--- a/bio-page.html
+++ b/bio-page.html
@@ -5,16 +5,15 @@
 	<link rel="stylesheet" href="bio-page.css">
   <link rel="stylesheet" type="text/css" href="logsign.css">
         <script src="logsign.js"></script>
-
 </head>
 <body>
 	<div id="topnav">
       <ul>
-	      <li><a href="index.html" target="_balnk">Home</a></li>
-	      <li><a href="history.html" target="_balnk">History</a></li>
-	      <li><a href="rules.html" target="_balnk">Rule</a></li>
-	      <li><a href="bio-page.html" target="_balnk">Meet the Developers</a></li>
-	      <li><a href="contact-us.html" target="_balnk">Contact-us</a></li>
+	      <li><a href="index.php" >Home</a></li>
+	      <li><a href="history.php" >History</a></li>
+	      <li><a href="rules.php" >Rule</a></li>
+	      <li><a href="bio-page.php" >Meet the Developers</a></li>
+	      <li><a href="contact-us.php" >Contact-us</a></li>
 	      <li class="dropdown">
           <a href="#" class="dropbtn">External Links</a>
           <div class="dropdown-content">
@@ -25,17 +24,16 @@
           </div>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropbtn">Login/Sign Up</a>
+          <a href="#" class="dropbtn">Login/Register</a>
           <div class="dropdown-content">
-            <a onclick="document.getElementById('id01').style.display='block'">Login</a>
-            <a onclick="document.getElementById('id02').style.display='block'">Sign Up</a>
+            <a href="login.php" >Login</a>
+            <a href="register.php">Register</a>
           </div>
         </li>
       </ul>
 </div> 
 	<h1 id="h1">Meet the developers!</h1>
 	<h2 id="h2" style="text-align:center">Developer Profile Card</h2>
-
 	<div class="card">
   		<img src="https://cdn.glitch.com/909dd5d4-24fc-44c0-a66b-e402939ee036%2FDuttAnjali_headshot.jpg?v=1594609643544" alt="rowson" style="width:100%">
   		<h1>Anjali Dutt</h1>
@@ -56,7 +54,6 @@
   			</div>
 		</div>
 	</div>
-
 	<div class="card">
  		<img src="https://cdn.glitch.com/909dd5d4-24fc-44c0-a66b-e402939ee036%2Ffb%20dp%203%20(2).jpg?v=1594612041387" alt="John" style="width:100%">
   		<h1>Usman Ali</h1>
@@ -77,11 +74,10 @@
   			</div>
 		</div>
 	</div>
-
 	<div class="card">
   		<img src="https://cdn.glitch.com/909dd5d4-24fc-44c0-a66b-e402939ee036%2Fwang.jpg?v=1595014390873" alt="John" style="width:100%">
   		<h1>ChiaChieh Wang</h1>
-  		<p class="title">Server Administrator and Application Deployment</p>
+  		<p class="title">Front-End Development and Application Deployment</p>
   		<p>Queens College</p>
   		<p><button class="modal-button" href="#myModal3">About</button></p>
 		<div id="myModal3" class="modal">
@@ -91,14 +87,13 @@
       					<h2>About ChiaChieh Wang</h2>
     				</div>
    				<div class="modal-body">
-      					<p>Chiachieh is a student at CUNY Queens College who aspires to work as a Server Administrator</p>
+      					<p>Hi, I'm Chia Chieh Wang! I am a senior student at Queens College majoring in computer science. I am a game lover, each day I would spend hours sitting in front of the computer. Therefore this is a great honor for me to be a part of the team that designs a connect 4 game.</p>
       					
     				</div>
     			
   			</div>
 		</div>
 	</div>
-
 	<div class="card">
 		<img src="https://cdn.glitch.com/909dd5d4-24fc-44c0-a66b-e402939ee036%2Fimage.png?v=1594613954361" alt="rowson" style="width:100%">
   		<h1>Hai Lin</h1>
@@ -119,7 +114,6 @@
   			</div>
 		</div>
 	</div>
-
 <script>
 var btn = document.querySelectorAll("button.modal-button");
 var modals = document.querySelectorAll('.modal');
